# lab3

./: .gitignore  CMakeLists.txt
source/: CMakeLists.txt  authors_lab3.h
source/plotting/: universe.cpp
source/simulation/: naive_cuda_simulation.cu
source/structures/: bounding_box.cpp
test_input/: CMakeLists.txt
test_lab3/: CMakeLists.txt
